<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- LANGUAGE INDEPENDENT -->
	<string name="app_name">City Guide</string>
	<string name="app_store_uri">https://play.google.com/store/apps/details?id=%1$s</string>
	<string name="maps_api_key">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>

	<!-- LANGUAGE DEPENDENT -->
	<string name="global_database_fail_toast">Wooops! Cannot read data from database</string>
	<string name="global_map_fail_toast">You device does not support map</string>

	<string name="title_poi_detail">Spot detail</string>
	<string name="title_map">Map</string>
	<string name="title_search">Search</string>

	<string name="menu_map">Map</string>
	<string name="menu_share">Share</string>
	<string name="menu_rate">Rate</string>
	<string name="menu_about">About</string>
	<string name="menu_layers">Layers</string>
	<string name="menu_layers_normal">Normal</string>
	<string name="menu_layers_satellite">Satellite</string>
	<string name="menu_layers_hybrid">Hybrid</string>
	<string name="menu_layers_terrain">Terrain</string>
	<string name="menu_search">Search</string>
	<string name="menu_search_hint">Search spots</string>

	<string name="drawer_title">City Guide</string>
	<string name="drawer_category_all">All spots</string>
	<string name="drawer_category_favorites">Favorites</string>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>

	<string name="placeholder_empty">No spots found</string>
	<string name="placeholder_offline">No Internet connection available</string>

	<string name="fragment_poi_detail_info_title">Info</string>
	<string name="fragment_poi_detail_map_title">Map</string>
	<string name="fragment_poi_detail_map_explore">Explore</string>
	<string name="fragment_poi_detail_map_navigate">Navigate</string>
	<string name="fragment_poi_detail_description_title">Description</string>
	<string name="fragment_poi_detail_share_subject">Spot</string>

	<string name="dialog_about_title">About</string>
	<string name="dialog_about_message"><![CDATA["Not all those who wander are lost." (J.R.R. Tolkien)<br /><br />City Guide app made with love by <a href="http://robotemplates.com">Robo Templates</a>.]]></string>

	<string name="unit_meter">m</string>
	<string name="unit_kilometer">km</string>
	<string name="unit_mile">mi</string>
</resources>
