<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/fragment_poi_detail_map"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	app:cardBackgroundColor="@color/global_bg_front"
	app:cardCornerRadius="@dimen/card_corner_radius"
	app:cardElevation="@dimen/elevation_card">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/global_spacing_xs"
			android:textAppearance="@style/TextAppearance.CityGuide.Headline"
			android:fontFamily="sans-serif-light"
			android:text="@string/fragment_poi_detail_map_title" />

		<View
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/dividerHorizontal" />

		<com.robotemplates.cityguide.view.SelectorLinearLayout
			android:id="@+id/fragment_poi_detail_map_image_wrap"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/global_spacing_xs"
			android:listSelector="@drawable/selector_clickable_item_bg"
			android:clickable="true"
			android:focusable="true">

			<ImageView
				android:id="@+id/fragment_poi_detail_map_image"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter" />

		</com.robotemplates.cityguide.view.SelectorLinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/dividerHorizontal" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/fragment_poi_detail_map_explore"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/global_spacing_xs"
				android:paddingRight="@dimen/global_spacing_xs"
				android:text="@string/fragment_poi_detail_map_explore"
				style="?android:attr/borderlessButtonStyle" />

			<Button
				android:id="@+id/fragment_poi_detail_map_navigate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/global_spacing_xs"
				android:paddingRight="@dimen/global_spacing_xs"
				android:text="@string/fragment_poi_detail_map_navigate"
				style="?android:attr/borderlessButtonStyle" />

		</LinearLayout>
	</LinearLayout>
</android.support.v7.widget.CardView>
